fixed a couple of typos

--- a/src/org/lockss/plugin/doc-files/PluginSpec.html
+++ b/src/org/lockss/plugin/doc-files/PluginSpec.html
@@ -61,12 +61,12 @@ the maximum hit rate allowed,
 etc.</li>
 
 <li><i>Where to start crawling.</i>
-It must know how to find and interpret the LOCKSS-specific <i>volume index page</i>
+It must know how to find and interpret the LOCKSS-specific <i>AU index page</i>
 which gives the daemon permission to crawl the site and provides the set of
 initial URLs at which to start the process.</li>
 
 <li><i>Where to stop crawling.</i>
-It must know where the boundaries of the,
+It must know where the boundaries of the AU,
 so as to distinguish those intra-AU links that the crawl should follow,
 and those links that point outside the AU,
 and thus should not be followed.</li>
